# embed

./: .gitignore  README.md  build_wasm.ps1  build_wasm.sh  index.html  package-lock.json  package-manager-check.js  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vercel.json
.vercel/: project.json
crates/embed_core/: Cargo.toml
crates/embed_core/src/: lib.rs  logger.rs
crates/embed_core/src/basefunc/: frame_645.rs  frame_cco.rs  frame_csg.rs  frame_err.rs  frame_fun.rs  frame_moudle.rs  frame_speecial.rs  frame_tctask.rs  mod.rs  protocol.rs
crates/embed_core/src/config/: appconfig.rs  constants.rs  mod.rs  oadmapconfig.rs  xmlconfig.rs
pkg-web/: embed_core.d.ts  embed_core.js  embed_core_bg.wasm.d.ts  package.json
public/config/: 50020200_list.yml  50040200_list.yml  50060200_list.yml  CSG13.xml  CSG16.xml  MOUDLE.xml  TASK_MS.xml  oad_list.yml
src/: App.css  App.tsx
src/components/: Icons.tsx  InfoItem.tsx  Layout.tsx  ProtocolConfigUploader.tsx  TaskDetail.tsx  TaskPreview.tsx  ThemeToggle.tsx  TreeItem.tsx  VirtualConfigItemList.tsx  VirtualTaskList.tsx  progress.tsx  treeview.tsx
src/contexts/: WasmContext.tsx
src/hooks/: useTaskExtractor.ts  useTaskSelection.ts  useTheme.ts  useWasmAnalyzer.ts
src/pages/: AnalysisPage.tsx  ConfigPage.tsx  FeedbackPage.tsx  SettingsPage.tsx  ToolsPage.tsx
src/pages/tools/: ChecksumPage.tsx  (+8 more)
src/stores/: useFrameAnalysicStore.ts  useProtocolInfoStore.ts  useSplitSizeSlice.ts  useThemeStore.ts  useTreeViewStore.ts
src/types/: index.ts
src/utils/: configValidator.ts  excelParser.ts  exportUtils.ts  pppFcs.ts  resourceLoader.ts  searchUtils.ts  taskExtractor.ts  taskParamGenerator.ts  wasmManager.ts
