[package]
name = "embed_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.37.5", features = ["serialize"] }
lazy_static = "1.5"
serde_yaml = "0.9"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Storage"] }
tauri = { version = "1.0", optional = true }

# basefunc 依赖
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
hex = "0.4"
once_cell = "1.21"
dirs-next = "2.0"

[features]
default = []
wasm = ["wasm-bindgen", "web-sys"]
desktop = ["tauri"]
